--- a/gb/25/11/18/n14638225.md
+++ b/gb/25/11/18/n14638225.md
@@ -12,37 +12,39 @@
 <p>陆上陈展部分，区分为陆战队指挥部的M109突击艇、双联装刺针飞弹、标枪飞弹、红雀二型无人机、监侦型无人机等；以及海军舰队指挥部的机动飞弹车及雷达车、锐鸢无人机、陆用型监侦无人机、舰载型监侦无人机等。◇</p>
 <p>责任编辑：昌英</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638158.md#1">台湾与以色列签2项合作备忘录 强化智财合作</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638016.md#1">台湾6现退役军人涉共谍案 检方起诉求处重刑</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638169.md#1">接手替九州博弈集团洗钱1年54亿 南部最大水房12人遭起诉</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638121.md#1">将迎来历年最长寒假 教育部：勿赴中国统战交流</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638115.md#1">港男频繁来台商务、观光吸收六现退役军人 洗中资逾千万台币来台</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14637972.md#1">台湾波兰召开经贸咨商会议 双边关系再创高峰</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637663.md#1">中国吁公民暂勿赴日 旅游作家：团客变少提高旅游品质</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637655.md#1">中共对日连环施压 专家：因不流血夺台战略被破</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637582.md#1">台法务部调查局：邀请全民共筑国安防护力</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688779.md#1">二水“山东夏氏?萧记烧饼”的手劲与坚持</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688826.md#1">财政部研议新青安2.0 公股银行提议80条款</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688824.md#1">具法律、谈判专业 宋承恩任海委会副主委</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688827.md#1">中国内需疲软 智利樱桃价格崩跌</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688829.md#1">黄仁勋：辉达晶圆需求大 台积电未来10年产能至少翻倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688865.md#1">台美关税协定破除疑美论 学者：川普任内 台美关系进展乐观</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688836.md#1">张又侠被抓敏感点 3军方高级将领接连病亡</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688831.md#1">黄金、白银皆创40多年来最大跌幅</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688833.md#1">新北竞总成立 黄国昌：让新北更有型</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688834.md#1">台北书展3日登场 文化币、门票折抵激买气</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/31/n11835336.md#1" target="_blank">王赫：庚子年首月 中共地动山摇</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/11/6/n11637774.md#1" target="_blank">澳媒刊登希腊裔法轮功学员的修炼故事</a></li>
+<li><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/1/n10013328.md#1" target="_blank">文武：中共毁灭了中国社会“三权分立”的传统</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/11/n11377666.md#1" target="_blank">平凡人不凡的修炼经历</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/11/n14411354.md#1">【品读唐诗】诗仙清平调 盛唐诗乐的巅峰</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/5/n14630000.md#1">天命难违 细柳姑娘知命认命的传奇人生（上）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/13/n14635021.md#1">【未解之谜】“自学成才，五术兼备” 中医高手倪海厦的传奇人生</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/17/n14618217.md#1">西夏王国消失之谜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/13/n14635199.md#1">研究发现人有“第七感” 不接触也能感知物体</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636258.md#1">【新闻大破解】美日印韩联盟 锁中共犯台路径</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/14/n14636051.md#1">【纪元焦点】传景俊海被查 习再失“根脉”守护者？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/14/n14635672.md#1">【佳音时刻】用自由对抗暴政 川普政府放大招</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/12/n14634796.md#1">邓超晒照为儿庆生 14岁等等腾空投篮获赞好帅</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/12/n14634836.md#1">演员李亚鹏开发的雪山艺术小镇被申请破产</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/12/n14634713.md#1">前F-35指挥官：中共J-35战机面临多项挑战</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/14/n14636097.md#1">胡歌新片耗资1亿 上映9小时票房仅76万元</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/13/n14635482.md#1">伊能静唱哈林歌曲遭版权警告 霸气反击引爆笑</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/13/n14635307.md#1">IU与边佑锡主演新剧 首度公开唯美剧照</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/13/n14635542.md#1">黄晓明新签约艺人引关注 网友感性形容其特质</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/13/n14634976.md#1">训犬师：这种狗比较可能咬小孩 最好别养</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/12/n14634828.md#1">2025年Early黑五优惠活动</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/13/n14635095.md#1">为何真空包装冷冻鱼不能直接加热？ 专家释疑</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/14/n14635666.md#1">5种生活方式的改变 可延缓老化和延长寿命</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/13/n14634950.md#1">亚省荣获“全球最向往地区”称号</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/23/n10079917.md#1">腊八的来源与风俗：吃了腊八饭就把年来办！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/6/19/n4461035.md#1">美人巨眼识穷途——读《虬髯客传》之红拂女(上)</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/6/23/n4464215.md#1">闻道长安似弈棋——读《虬髯客传》之虬髯客(下)</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/8/2/n3332566.md#1">守信重义 等到迟来的好姻缘</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/28/n14685999.md#1">揭示真实的米开朗基罗壁画色彩</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688423.md#1">【百年真相】习亲提24个亿元贪官 酿七大问题</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688343.md#1">【重播】高市早苗会晤来访英首相并举行记者会</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688656.md#1">【时事金扫描】伊朗多地被炸 美以斩首开始？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687842.md#1">为何金价暴跌 创40年来最大单日跌幅</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14687999.md#1">军方缺席中共政治局会议 专家析内讧后遗症</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688147.md#1">中共吁官兵支持处理张又侠 被指证军心不稳</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/29/n14687150.md#1">儿子遭庾澄庆不回信息 伊能静帮前夫打圆场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/29/n14687077.md#1">女星金晨被爆驾车肇事逃逸 疑让助理顶包惹议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688459.md#1">陆媒票选最有好感艺人 佘诗曼成唯一入榜港星</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687186.md#1">遭王祖蓝挑战身高 大陆歌手周深幽默回应</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14687927.md#1">金钟国罕见公开爱妻身份 称一直把她当妹妹看</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687329.md#1">占星家披露2026年最幸运的几个日子</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688718.md#1">这些行为看似无害 但会让旅馆员工恼火</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/28/n14685989.md#1">2026年不容错过的旅行目的地</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687470.md#1">专家解析嫉妒损害伴侣关系的3种方式</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688143.md#1">【车评】展现超级四驱实力 2025 Mitsubishi Outlander SEL</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/11/18/n14638225.htm">海军高雄营区 11/22开放民众登军舰</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638225.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
