--- a/gb/23/6/21/n14020444.md
+++ b/gb/23/6/21/n14020444.md
@@ -3,8 +3,7 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>徐旭东 : 乐观看下半年零售</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/06/id14020445-620684-600x400.jpg" />
-<h6>远百董事长徐旭东（图）表示，受惠疫情趋缓，人潮回流，百货零售去年营业额摆脱连两年衰退，远东百货业绩写成立以来新高。（中央社）
-</h6>
+<h6>远百董事长徐旭东（图）表示，受惠疫情趋缓，人潮回流，百货零售去年营业额摆脱连两年衰退，远东百货业绩写成立以来新高。（中央社）</h6>
 <hr>
 <p>【大纪元2023年06月21日讯】（大纪元记者侯骏霖台湾台北报导）远东百货21日举行股东常会，董事长徐旭东以“妈妈床脚下都有私房钱”来比喻台湾储蓄率，认为景气即使下行仍有支撑，乐观解读百货业下半年景气展望；随着零售产业陆续掀起整并潮，他说，远百集团旗下爱买规模适中、转型不会太辛苦，预计未来可开50家至100家店。</p>
 <p>近年全联并购大润发、统一收购家乐福，掀起零售产业整并潮，针对远百旗下爱买是否启动转型备受关注。徐旭东认为，由于消费趋势在转变，顾客到量贩店消费觉得有点浪费时间，“大型量贩店时代已经过去”，爱买因为店型大小适中、未来转型比较容易。</p>
@@ -15,41 +14,33 @@
 <p>针对市场布局，徐旭东说，中国重庆远东城预计在明年首季开幕，商场面积约2.4万坪，位于台北大巨蛋的SOGO CITY，则预计于明年首季前全区开幕完成，营业面积来到3.6万坪；目前远东SOGO业绩及获利年增超过一成、爱买网购业绩则年增逾三成。</p>
 <p>责任编辑：吕美琪</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/7/28/n13790951.md#1">成立数位发展部 蔡英文：助台后疫情时代取得优势</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/11/4/n13859568.md#1">徐旭东乐观明年景气 大巨蛋SOGO拼东南亚第一</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/3/3/n13941984.md#1">元智大学34生日快乐 校友餐会凝聚向心力</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/3/31/n13962695.md#1">2月制造业景气连亮4蓝灯 台经院：应留意两岸科技竞合</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/5/26/n14004374.md#1">元智2023金毕辉煌 527隆重登场</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/5/31/n14007351.md#1">井琪谈远传亚太合并进度 期望端午节传佳音</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/6/6/n14011076.md#1">东联打入台积电供应链</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/6/13/n14015271.md#1">台股攻万七 徐旭东：台湾经济好得很</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/6/16/n14017430.md#1">台央行下修经济成长率不保2 徐旭东：台湾也没那么差</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/29/n14360134.md#1">AI、车用推升台湾被动元件 估明年产值成长6.3%</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640659.md#1">罗晋被传婚变之际 经纪人发布罗父离世噩耗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640721.md#1">三退声明精选（2025/11/21）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640342.md#1">英申请永居资格年限延至10年 港人BNO年限不变</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640341.md#1">郑州多名男子开越野车撞开烟酒店大门抢劫</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/7/12/n10556515.md#1" target="_blank">凌晓辉：毒害人类灵魂的共产主义理论（上）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/30/n11489082.md#1" target="_blank">反迫害20周年 34国法轮功学员伦敦集会</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/12/12/n9951023.md#1" target="_blank">林辉：周恩来如此对待两位救命恩人</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/6/24/n8031801.md#1" target="_blank">五年偏瘫一念即愈</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/30/n14360732.md#1">墨西哥南部丛林发现失落的玛雅古城</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/17/n14352322.md#1">【古道人生】父亲嫌女婿家变穷悔婚 女儿守婚约得好结果</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/28/n14359080.md#1">美国9岁女孩突然描述前世生活 父母惊呆</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/29/n14359817.md#1">老妇濒死看见天堂地狱 上帝要她带话回人间</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/28/n14359497.md#1">【未解之谜】CIA禁书（上）揭秘文明的开启与终结</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/3/n14363224.md#1">【靖远开讲】贺锦丽强势反攻 松鼠撬动大选？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/1/n14362720.md#1">【时事金扫描】俄乌战损严重 首名朝鲜俘虏开口</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/1/n14362702.md#1">【未解之谜】CIA禁书（下）新一次文明更迭倒计时？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/25/n14357530.md#1">搭乘飞机需避免穿哪些衣服 空姐告诉你</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/2/n14362842.md#1">中南海纪念叶选平冥诞用语敏感 内斗引关注</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/26/n14358102.md#1">独家：610内部会议记录泄基层运作内幕（上）</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/31/n14361950.md#1">揭娱圈潜规则 赵丽颖《乔妍的心事》登东京影展</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/1/n14362693.md#1">贝克汉姆夫妇为女儿铺路 13岁哈珀踏入娱乐圈</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/2/n14363160.md#1">洪金宝自称前世是一头牛 武功胜过甄子丹</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/2/n14363143.md#1">汤唯被大衣披肩价格惊呆 逗趣表情笑翻网友</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/1/n14362022.md#1">真人机动战士电影《钢弹》 2025年开始制作</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/3/n14363370.md#1">这一物可清理马克杯里的茶渍 效果超乎想像</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/3/n14363289.md#1">2024世界最美丽女性榜单出炉 美的标准是什么？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/30/n14360919.md#1">青花菜与绿花椰菜不同 别再傻傻分不清</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/31/n14361469.md#1">“杜布罗夫尼克”旅游 欣赏中世纪古城之美</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/16/n14351530.md#1">50岁以后 开始享受“绕路”的乐趣</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/23/n10079917.md#1">腊八的来源与风俗：吃了腊八饭就把年来办！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/6/19/n4461035.md#1">美人巨眼识穷途——读《虬髯客传》之红拂女(上)</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/6/23/n4464215.md#1">闻道长安似弈棋——读《虬髯客传》之虬髯客(下)</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/8/2/n3332566.md#1">守信重义 等到迟来的好姻缘</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/28/n14685999.md#1">揭示真实的米开朗基罗壁画色彩</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688423.md#1">【百年真相】习亲提24个亿元贪官 酿七大问题</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688343.md#1">【重播】高市早苗会晤来访英首相并举行记者会</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688656.md#1">【时事金扫描】伊朗多地被炸 美以斩首开始？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687842.md#1">为何金价暴跌 创40年来最大单日跌幅</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14687999.md#1">军方缺席中共政治局会议 专家析内讧后遗症</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688147.md#1">中共吁官兵支持处理张又侠 被指证军心不稳</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/29/n14687150.md#1">儿子遭庾澄庆不回信息 伊能静帮前夫打圆场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/29/n14687077.md#1">女星金晨被爆驾车肇事逃逸 疑让助理顶包惹议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688459.md#1">陆媒票选最有好感艺人 佘诗曼成唯一入榜港星</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687186.md#1">遭王祖蓝挑战身高 大陆歌手周深幽默回应</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14687927.md#1">金钟国罕见公开爱妻身份 称一直把她当妹妹看</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687329.md#1">占星家披露2026年最幸运的几个日子</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/2/1/n14688718.md#1">这些行为看似无害 但会让旅馆员工恼火</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/28/n14685989.md#1">2026年不容错过的旅行目的地</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/30/n14687470.md#1">专家解析嫉妒损害伴侣关系的3种方式</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/1/31/n14688143.md#1">【车评】展现超级四驱实力 2025 Mitsubishi Outlander SEL</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/6/21/n14020444.htm">徐旭东 : 乐观看下半年零售</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/6/21/n14020444.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
